--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,6 +80,15 @@
         android:background="@drawable/button_background"
         android:layout_marginTop="32dp"/>
 
+    <!-- Progress Bar (Initially hidden) -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
+
     <!-- Sign Up Text -->
     <TextView
         android:id="@+id/SignUpHere"
