--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8E4D0"
-    tools:context=".MainActivity">
+    android:background="#E8E4D0">
 
     <ImageView
         android:id="@+id/logo_header"
@@ -25,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
+        android:textColor="@color/black"
         android:textAllCaps="false"
         android:background="@drawable/custom_button"
         app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
@@ -37,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
+        android:textColor="@color/black"
         android:text="@string/login"
         android:textAllCaps="false"
         android:background="@drawable/custom_button"
