--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,14 @@
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="#104944"
         android:theme="@style/ThemeOverlay.Material3.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.Material3.ActionBar"
-        app:title="My App Title" />
+        app:title="Wardrobe Share"
+        app:titleTextColor="@color/white"/>
 
     <!-- Fragment Container for Navigation -->
     <androidx.fragment.app.FragmentContainerView
@@ -37,7 +38,7 @@
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey"
+        android:background="#104944"
         app:itemIconSize="24dp"
         app:elevation="0dp"
         app:itemIconTint="@color/bottom_nav_icon_colors"
