--- a/app/src/main/res/layout/post_holder.xml
+++ b/app/src/main/res/layout/post_holder.xml
@@ -10,7 +10,6 @@
         app:cardBackgroundColor="@color/grey"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
-        app:strokeColor="@color/purple"
         app:strokeWidth="2dp">
 
         <LinearLayout
@@ -31,8 +30,8 @@
                 <!-- Seller Photo -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/sellerPhoto"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/user"
                     app:civ_border_width="2dp"
                     app:civ_border_color="#FFFFFF" />
@@ -49,17 +48,10 @@
                         android:id="@+id/sellerName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/white" />
 
-                    <TextView
-                        android:id="@+id/itemDescription"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:textColor="@color/white"
-                        android:layout_marginTop="4dp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -82,18 +74,27 @@
                 android:paddingHorizontal="8dp">
 
                 <TextView
+                    android:id="@+id/itemDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="4dp" />
+
+                <TextView
                     android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColor="@color/white"
-                    android:text="@string/location"/>
+                    android:text="@string/location"
+                    android:layout_marginTop="4dp" />
 
                 <TextView
                     android:id="@+id/contact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColor="@color/white"
                     android:layout_marginTop="4dp"
                     android:text="@string/contact"/>
