--- a/app/src/main/res/layout/post_holder.xml
+++ b/app/src/main/res/layout/post_holder.xml
@@ -45,12 +45,13 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/sellerName"
+                        android:id="@+id/authorName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/white"
+                        android:text="Author Name" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -105,3 +106,4 @@
     </com.google.android.material.card.MaterialCardView>
 
 </layout>
+
