--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:navigationIconTint="@color/white"
         app:popupTheme="@style/ThemeOverlay.Material3.ActionBar"
         app:title="Wardrobe Share"
         app:titleTextColor="@color/white"/>
