--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
             android:id="@+id/profileImage"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/wardrobe_share_png_logo" />
+            android:src="@drawable/user" />
 
         <LinearLayout
             android:layout_width="match_parent"
