--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,9 +15,15 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.wardrobe_share.HomeFragment"
-        android:label="Home"
-        tools:layout="@layout/fragment_home" >
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_editPostFragment"
+            app:destination="@id/editPostFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/editPostFragment"
+        android:name="com.example.wardrobe_share.EditPostFragment"
+        android:label="EditPostFragment" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.wardrobe_share.ProfileFragment"
