--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F0F7F4">
-
+    android:background="#E8E4D0"
+    >
     <!-- Profile Section -->
     <LinearLayout
         android:layout_width="match_parent"
