--- a/app/src/main/res/layout/item_user_message.xml
+++ b/app/src/main/res/layout/item_user_message.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#E8E4D0"
     android:padding="8dp">
 
     <!-- User message -->
