--- a/app/src/main/res/layout/post_holder.xml
+++ b/app/src/main/res/layout/post_holder.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,12 +14,11 @@
         app:strokeWidth="2dp">
 
         <LinearLayout
+            android:background="#E8E4D0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:background="@color/grey">
-
+            android:padding="16dp">
             <!-- Seller Info Container -->
             <LinearLayout
                 android:layout_width="match_parent"
