--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textAllCaps="false"
-        android:background="@drawable/custom_button"
+        android:backgroundTint="#104944"
         app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,11 +34,10 @@
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:text="@string/login"
         android:textAllCaps="false"
-        android:background="@drawable/custom_button"
+        android:backgroundTint="#104944"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/register_button"
         app:layout_constraintHorizontal_bias="0.5"
