--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/button_background"
+                android:backgroundTint="@color/black"
                 android:text="Open camera"
                 android:textSize="16sp" />
 
@@ -53,7 +53,7 @@
                 android:layout_marginBottom="16dp"
                 android:text="Select from photos"
                 android:textSize="16sp"
-               android:background="@drawable/button_background" />
+               android:backgroundTint="@color/black" />
         </LinearLayout>
 
             <ImageView
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:text="Post item"
-                android:background="@drawable/button_background"/>
+                android:backgroundTint="#104944"/>
 
         </LinearLayout>
 
