--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -76,8 +76,8 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:text="@string/login"
-        android:textColor="@color/black"
-        android:background="@drawable/button_background"
+        android:textColor="@color/white"
+        android:backgroundTint="#104944"
         android:layout_marginTop="32dp"/>
 
     <!-- Progress Bar (Initially hidden) -->
