--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
         android:padding="16dp"
         android:gravity="center_vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -43,6 +43,8 @@
                 android:text="Edit Profile"
                 android:textAllCaps="false"
                 app:cornerRadius="20dp"
+                app:backgroundTint="#104944"
+                android:textColor="@color/white"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_marginEnd="8dp"/>
 
@@ -53,8 +55,9 @@
                 android:text="Logout"
                 android:textAllCaps="false"
                 app:cornerRadius="20dp"
+                app:backgroundTint="#104944"
+                android:textColor="@color/white"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
-
         </LinearLayout>
 
     </LinearLayout>
