--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -140,20 +140,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/text_choose_profile_pic"
-                android:textColor="@color/black"
-                android:background="@drawable/button_background"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/black"
                 android:layout_marginTop="24dp"/>
 
-            <!-- Take Photo Button -->
             <Button
                 android:id="@+id/takePhotoButton"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/take_a_picture"
                 android:textColor="@color/white"
-                android:background="@color/black"
+                android:backgroundTint="@color/black"
                 android:layout_marginTop="16dp"/>
-
             <!-- ImageView to display the selected or captured image, initially hidden -->
             <ImageView
                 android:id="@+id/selectedImageView"
@@ -173,9 +171,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/sign_up"
-                android:textColor="@color/black"
-                android:background="@drawable/button_background"
+                android:textColor="@color/white"
+                android:backgroundTint="#104944"
                 android:layout_marginTop="16dp"/>
+
 
             <!-- Login Link -->
             <TextView
