--- a/app/src/main/res/layout/item_user_message.xml
+++ b/app/src/main/res/layout/item_user_message.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/bg_user_message"
         android:padding="10dp"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline70"
         app:layout_constraintTop_toTopOf="parent"
