--- a/app/src/main/res/layout/post_holder.xml
+++ b/app/src/main/res/layout/post_holder.xml
@@ -11,7 +11,8 @@
         app:cardBackgroundColor="@color/grey"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
-        app:strokeWidth="2dp">
+        app:strokeWidth="2dp"
+        app:strokeColor="@color/black">
 
         <LinearLayout
             android:background="#E8E4D0"
@@ -34,7 +35,7 @@
                     android:layout_height="50dp"
                     android:src="@drawable/user"
                     app:civ_border_width="2dp"
-                    app:civ_border_color="#FFFFFF" />
+                    app:civ_border_color="@color/white" />
 
                 <!-- Seller Name and Item Description -->
                 <LinearLayout
@@ -50,7 +51,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/black" />
 
                 </LinearLayout>
 
@@ -101,7 +102,7 @@
                     android:textSize="16sp"
 
                     android:text="@string/description"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:layout_marginTop="4dp" />
 
                 <TextView
@@ -109,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:text="@string/location"
                     android:layout_marginTop="4dp" />
 
@@ -118,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:layout_marginTop="4dp"
                     android:text="@string/contact"/>
             </LinearLayout>
