--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#E8E4D0"
     android:layout_height="match_parent">
 
     <ProgressBar
@@ -30,7 +31,6 @@
             android:orientation="vertical"
             android:spacing="16dp">
 
-            <!-- Add ImageView and Buttons for image selection -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:backgroundTint="@color/black"
+                    android:backgroundTint="#104944"
                     android:text="Open camera"
                     android:textSize="16sp" />
 
@@ -53,7 +53,7 @@
                     android:layout_marginBottom="16dp"
                     android:text="Select from photos"
                     android:textSize="16sp"
-                    android:backgroundTint="@color/black"/>
+                    android:backgroundTint="#104944"/>
             </LinearLayout>
 
             <ImageView
@@ -67,7 +67,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/takePictureButton"
                 app:layout_constraintBottom_toTopOf="@+id/generateButton" />
 
-            <!-- Existing TextInputLayouts -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/descriptionLayout"
                 android:layout_width="match_parent"
@@ -127,7 +126,6 @@
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Update Button -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/updateButton"
                 android:layout_width="match_parent"
