--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,7 +6,6 @@
     android:fillViewport="true"
     android:background="#E8E4D0">
 
-    <!-- Single child container for the ScrollView -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,9 +15,9 @@
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/registerLayout"
@@ -26,6 +25,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="24dp"
+            android:visibility="gone"
             android:gravity="center_horizontal">
 
             <ImageView
@@ -40,7 +40,6 @@
                 android:layout_height="2dp"
                 android:background="@color/black"/>
 
-            <!-- Register Text -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,7 +49,6 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="24dp"/>
 
-            <!-- Username -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,7 +69,6 @@
                 android:inputType="textPersonName"
                 android:textColorHint="#80000000"/>
 
-            <!-- Email -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +89,6 @@
                 android:inputType="textEmailAddress"
                 android:textColorHint="#80000000"/>
 
-            <!-- Password -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -113,7 +109,6 @@
                 android:inputType="textPassword"
                 android:textColorHint="#80000000"/>
 
-            <!-- Confirm Password -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -134,7 +129,6 @@
                 android:inputType="textPassword"
                 android:textColorHint="#80000000"/>
 
-            <!-- Add Photo Button -->
             <Button
                 android:id="@+id/addPhotoButton"
                 android:layout_width="match_parent"
@@ -152,7 +146,6 @@
                 android:textColor="@color/white"
                 android:backgroundTint="@color/black"
                 android:layout_marginTop="16dp"/>
-            <!-- ImageView to display the selected or captured image, initially hidden -->
             <ImageView
                 android:id="@+id/selectedImageView"
                 android:layout_width="150dp"
@@ -165,7 +158,6 @@
                 android:background="@drawable/input_background" />
 
 
-            <!-- Sign Up Button -->
             <Button
                 android:id="@+id/signUpButton"
                 android:layout_width="match_parent"
@@ -176,7 +168,6 @@
                 android:layout_marginTop="16dp"/>
 
 
-            <!-- Login Link -->
             <TextView
                 android:id="@+id/loginLink"
                 android:layout_width="wrap_content"
